backoffice/static/css/base.css
.img-btn {
  position: relative;
}

.img-btn .btn {
    position: absolute;
    top: 0px;
    left: 0px;
    transform: translate(112px, -65px);
    color: red;
    border-color: red;
}

.btn-kind {
    width: 100px;
    height: 100px;
}

#productCreationModal .modal-content {
    width: 750px;
}

.YTvideoList .modal-dialog {
    max-width: 700px;
}

.YTvideoList img {
    cursor: pointer;
}

.signup-logo {
    width: 250px;
}

/* Navbar in Campaigns page */
.nav-tabs--vertical {
  border-bottom: none;
  border-right: 1px solid #ddd;
  display: flex;
  flex-flow: column nowrap;
}
.nav-tabs--left {
  margin: 0 15px;
}
.nav-tabs--left .nav-item + .nav-item {
  margin-top: 0.25rem;
}
.nav-tabs--left .nav-link {
  transition: border-color 0.125s ease-in;
  white-space: nowrap;
}
.nav-tabs--left .nav-link:hover {
  background-color: #f7f7f7;
  border-color: transparent;
}
.nav-tabs--left .nav-link.active {
  border-bottom-color: #ddd;
  border-right-color: #fff;
  border-bottom-left-radius: 0.25rem;
  border-top-right-radius: 0;
  margin-right: -1px;
}
.nav-tabs--left .nav-link.active:hover {
  background-color: #fff;
  border-color: #0275d8 #fff #0275d8 #0275d8;
}

